--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,7 @@
             android:text="@string/follow_title" />
 
         <RadioButton
+            android:visibility="gone"
             android:id="@+id/rb_message"
             style="@style/main_tab"
             android:drawableTop="@drawable/selector_main_tab_message_icon"
