--- a/app/src/main/res/layout/head_discount_pack.xml
+++ b/app/src/main/res/layout/head_discount_pack.xml
@@ -2,43 +2,44 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="44dp"
-    android:background="@color/bg_color"
+    android:background="@color/white"
     android:gravity="center_vertical"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:paddingLeft="12dp"
+    android:paddingRight="12dp">
 
     <TextView
-        android:layout_width="0dp"
+        android:layout_width="94.5dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:gravity="center"
         android:text="名称"
-        android:textColor="@color/text_hint"
-        android:textSize="16sp" />
+        android:textColor="@color/text_color_mine_pack"
+        android:textSize="13sp" />
 
     <TextView
-        android:layout_width="0dp"
+        android:layout_width="94.5dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
         android:text="数量"
-        android:textColor="@color/text_hint"
-        android:textSize="16sp" />
+        android:textColor="@color/text_color_mine_pack"
+        android:textSize="13sp" />
 
     <TextView
-        android:layout_width="0dp"
+        android:layout_width="94.5dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
         android:text="券号"
-        android:textColor="@color/text_hint"
-        android:textSize="16sp" />
+        android:textColor="@color/text_color_mine_pack"
+        android:textSize="13sp" />
 
     <TextView
-        android:layout_width="0dp"
+        android:layout_width="94.5dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
         android:text="有效期"
-        android:textColor="@color/text_hint"
-        android:textSize="16sp" />
+        android:textColor="@color/text_color_mine_pack"
+        android:textSize="13sp" />
 </LinearLayout>
