--- a/app/src/main/res/layout/item_discount_pack.xml
+++ b/app/src/main/res/layout/item_discount_pack.xml
@@ -1,57 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_height="44dp"
+    android:gravity="center_vertical"
+    android:orientation="horizontal"
+    android:paddingLeft="12dp"
+    android:paddingRight="12dp">
+
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:background="@color/white"
+        android:id="@+id/ll_use_rebate"
+        android:layout_width="94.5dp"
+        android:layout_height="36.5dp"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tv_name"
-            android:layout_width="0dp"
+            android:layout_width="26.5dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:background="@drawable/bg_use_rebate_left"
             android:gravity="center"
-            android:textColor="@color/text_hint"
-            android:textSize="16sp" />
+            android:text="3%"
+            android:textColor="@color/white"
+            android:textSize="12sp"
+            android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/tv_num"
-            android:layout_width="0dp"
+            android:id="@+id/tv_type"
+            android:layout_width="68dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:textColor="@color/text_hint"
-            android:textSize="16sp" />
+            android:layout_marginLeft="-1dp"
+            android:background="@drawable/bg_use_rebate_right"
+            android:drawableLeft="@drawable/ponit_use_rebate"
+            android:gravity="center_vertical"
+            android:paddingLeft="8dp"
+            android:text="返利券"
+            android:textColor="@color/white"
+            android:textSize="12sp"
+            android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/tv_id"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:textColor="@color/text_hint"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/tv_day"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:textColor="@color/text_hint"
-            android:textSize="16sp" />
     </LinearLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:layout_marginLeft="13dp"
-        android:layout_marginRight="13dp"
-        android:background="@color/divider_color_pack" />
+    <TextView
+        android:id="@+id/tv_num"
+        android:layout_width="94.5dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:textColor="@color/text_color_mine_pack"
+        android:textSize="12sp" />
+
+    <TextView
+        android:id="@+id/tv_id"
+        android:layout_width="94.5dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:textColor="@color/text_color_mine_pack"
+        android:textSize="12sp" />
+
+    <TextView
+        android:id="@+id/tv_day"
+        android:layout_width="94.5dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:textColor="@color/text_color_mine_pack"
+        android:textSize="12sp" />
 </LinearLayout>
