--- a/app/src/main/res/layout/fragment_find_rank.xml
+++ b/app/src/main/res/layout/fragment_find_rank.xml
@@ -20,7 +20,8 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_find_rank"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:overScrollMode="never"/>
 
             <RelativeLayout
                 android:id="@+id/rl_empty"
