--- a/app/src/main/res/layout/item_rank_list.xml
+++ b/app/src/main/res/layout/item_rank_list.xml
@@ -25,8 +25,8 @@
 
     <ImageView
         android:id="@+id/iv_user_level"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="37.2dp"
+        android:layout_height="14.4dp"
         android:layout_centerVertical="true"
         android:layout_marginLeft="8dp"
         android:layout_toRightOf="@id/iv_user_image" />
@@ -36,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="12.5dp"
+        android:layout_marginLeft="5dp"
         android:layout_toRightOf="@id/iv_user_level"
         android:textColor="#404040"
         android:textSize="15sp"
@@ -79,16 +79,6 @@
             android:textColor="#ff611c"
             android:textSize="12sp" />
 
-
     </RelativeLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:background="#e5e5e5" />
-
 
 </RelativeLayout>
