--- a/app/src/main/res/layout/item_rank_top.xml
+++ b/app/src/main/res/layout/item_rank_top.xml
@@ -4,24 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="200dp"
+    android:layout_marginBottom="10dp"
     android:background="@color/tab_color">
 
     <com.whzl.mengbi.ui.widget.view.CircleImageView
         android:id="@+id/iv_top_avatar"
-        android:layout_width="89dp"
-        android:layout_height="97dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView2"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.677" />
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="114dp"
-        android:layout_height="110dp"
+        android:layout_width="93dp"
+        android:layout_height="108dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
@@ -29,7 +30,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.697"
+        app:layout_constraintVertical_bias="0.658"
         tools:ignore="MissingConstraints" />
 
 
@@ -44,25 +45,25 @@
             android:id="@+id/tv_nick_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#404040"
-            android:layout_centerInParent="true"/>
+            android:layout_centerInParent="true"
+            android:textColor="#404040" />
 
         <ImageView
             android:id="@+id/iv_level_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toLeftOf="@id/tv_nick_name"
+            android:layout_width="37.2dp"
+            android:layout_height="14.4dp"
+            android:layout_centerVertical="true"
             android:layout_marginRight="5dp"
-            android:layout_centerVertical="true"/>
+            android:layout_toLeftOf="@id/tv_nick_name" />
 
         <ImageView
             android:id="@+id/iv_live_state"
             android:layout_width="13dp"
             android:layout_height="16dp"
+            android:layout_centerVertical="true"
             android:layout_marginLeft="5dp"
             android:layout_toRightOf="@id/tv_nick_name"
-            android:layout_centerVertical="true"
-            android:visibility="gone"/>
+            android:visibility="gone" />
     </RelativeLayout>
 
     <TextView
