--- a/app/src/main/res/layout/activity_chip_composite.xml
+++ b/app/src/main/res/layout/activity_chip_composite.xml
@@ -19,8 +19,7 @@
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/comm_white">
+            android:layout_height="match_parent">
 
             <RelativeLayout
                 android:id="@+id/rl_empty"
