--- a/app/src/main/res/layout/activity_history_list.xml
+++ b/app/src/main/res/layout/activity_history_list.xml
@@ -8,7 +8,8 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="0.3dp"/>
+        android:layout_height="6.5dp"
+        android:background="@drawable/view_space" />
 
     <RelativeLayout
         android:layout_width="match_parent"
