--- a/app/src/main/res/layout/activity_account_switch.xml
+++ b/app/src/main/res/layout/activity_account_switch.xml
@@ -2,10 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/comm_white"
+    android:background="@color/white"
     android:orientation="vertical">
 
-    <include layout="@layout/comm_white_toolbar" />
+    <include layout="@layout/white_toolbar" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler"
