--- a/app/src/main/res/layout/activity_common_list.xml
+++ b/app/src/main/res/layout/activity_common_list.xml
@@ -5,7 +5,7 @@
     android:fitsSystemWindows="true"
     android:orientation="vertical">
 
-    <include layout="@layout/comm_white_toolbar" />
+    <include layout="@layout/white_toolbar" />
 
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:id="@+id/refresh"
