--- a/app/src/main/res/layout/fragment_goodnum_shop.xml
+++ b/app/src/main/res/layout/fragment_goodnum_shop.xml
@@ -76,6 +76,7 @@
             android:id="@+id/ll_tips"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="7dp"
             android:orientation="horizontal"
             android:visibility="visible">
 
@@ -84,7 +85,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:drawablePadding="6dp"
-                android:drawableStart="@drawable/point_play_notify"
+                android:drawableStart="@drawable/point_goodnum"
                 android:text="搜索到与 "
                 android:textColor="@color/text_view"
                 android:textSize="12sp" />
@@ -311,6 +312,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
+                android:layout_marginTop="120dp"
                 android:gravity="center"
                 android:orientation="horizontal">
 
