--- a/app/src/main/res/layout/head_car_pack.xml
+++ b/app/src/main/res/layout/head_car_pack.xml
@@ -4,9 +4,7 @@
     android:layout_height="44dp"
     android:background="@color/white"
     android:gravity="center_vertical"
-    android:orientation="horizontal"
-    android:paddingLeft="12dp"
-    android:paddingRight="12dp">
+    android:orientation="horizontal">
 
 
     <TextView
