--- a/app/src/main/res/layout/item_car_pack.xml
+++ b/app/src/main/res/layout/item_car_pack.xml
@@ -3,9 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="52dp"
     android:gravity="center_vertical"
-    android:orientation="horizontal"
-    android:paddingLeft="12dp"
-    android:paddingRight="12dp">
+    android:orientation="horizontal">
 
 
     <LinearLayout
