--- a/app/src/main/res/layout/layout_title.xml
+++ b/app/src/main/res/layout/layout_title.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/title"
     android:layout_width="match_parent"
-    android:layout_height="46dp"
+    android:layout_height="44dp"
     android:background="@color/white"
     android:orientation="vertical">
 
@@ -15,7 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:paddingLeft="12dp"
+            android:paddingLeft="16dp"
             android:src="@drawable/ic_login_back" />
     </RelativeLayout>
 
@@ -24,9 +24,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:textColor="@color/tran_black2"
-        android:textSize="19sp"
-        android:textStyle="bold" />
+        android:textColor="@color/textcolor_white_toolbar"
+        android:textSize="15sp" />
 
     <TextView
         android:id="@+id/tv_menu_text"
