--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -462,5 +462,6 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:textStyle">bold</item>
         <item name="tabSelectedTextColor">@color/white</item>
+        <item name="tabBackground">@color/tab_color</item>
     </style>
 </resources>
