--- a/app/src/main/res/layout/item_rank_list.xml
+++ b/app/src/main/res/layout/item_rank_list.xml
@@ -6,10 +6,10 @@
 
     <TextView
         android:id="@+id/tv_rank"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="25dp"
+        android:layout_height="match_parent"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="11.5dp"
+        android:layout_marginLeft="5dp"
         android:textSize="15sp"
         android:gravity="center"
         android:textColor="#000000"
@@ -20,7 +20,6 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_toRightOf="@id/tv_rank"
-        android:layout_marginLeft="12dp"
         android:layout_centerVertical="true"/>
 
     <ImageView
@@ -28,7 +27,7 @@
         android:layout_width="37.2dp"
         android:layout_height="14.4dp"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="8dp"
+        android:layout_marginLeft="12dp"
         android:layout_toRightOf="@id/iv_user_image" />
 
     <TextView
